# autocast

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
autocast/: __init__.py  config.py  orchestrator.py  seeds.py  spine.py
autocast/ffmpeg/: __init__.py  ambient.py  kenburns.py  mux.py  run.py
autocast/providers/: __init__.py  cascade.py  image.py  llm.py  tts.py
autocast/stages/: __init__.py  assets.py  direction.py  images.py  script.py  thumbnail.py  topic.py  tts.py  upload.py  video.py
autocast/util/: __init__.py  logging.py  manifest.py  net.py  youtube_auth.py
docs/: README.md  app.js  index.html  styles.css
docs/research/: keyless-llm-text-spike.md
queue/: topics.json
runs/: manifest.json
runs/2026-07-21/: run.json  run.log.jsonl
runs/2026-07-21/assets/: voice_concat.txt
runs/2026-07-22/: run.json  run.log.jsonl
runs/2026-07-22/assets/: voice_concat.txt
runs/2026-07-23/: run.json  run.log.jsonl
runs/2026-07-23/assets/: voice_concat.txt
tests/: test_ambient.py  test_orchestrator_dryrun.py  test_real_helpers.py  test_seeds.py  test_spine.py  test_thumbnail.py
